--- a/app-text/rfcutil/ChangeLog
+++ b/app-text/rfcutil/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/rfcutil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.35 2012/10/08 14:18:35 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.36 2012/10/10 11:46:24 blueness Exp $
+
+  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org> rfcutil-3.2.3-r2.ebuild:
+  stable ppc ppc64, bug #437616
 
   08 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> rfcutil-3.2.3-r2.ebuild:
   Stable on amd64 wrt bug #437616
