--- a/x11-misc/3dfm/ChangeLog
+++ b/x11-misc/3dfm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/3dfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/3dfm/ChangeLog,v 1.9 2012/10/10 12:09:56 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/3dfm/ChangeLog,v 1.10 2012/10/10 12:16:46 pinkbyte Exp $
+
+  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
+  Small fixes in metadata, add desktop-effects herd to maintainers
 
   10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> 3dfm-1.0.ebuild:
   QA: add missing RDEPEND and 'die' statements
