--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.702 2012/10/10 12:21:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.703 2012/10/10 12:23:59 blueness Exp $
+
+*hardened-sources-3.5.6 (10 Oct 2012)
+
+  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.5.6.ebuild:
+  vanilla-3.5.6 + genpatches-3.5-6 + grsecurity-2.9.1-3.5.6-201210071716
 
 *hardened-sources-3.2.30-r3 (10 Oct 2012)
 
