--- a/x11-themes/iceicons/ChangeLog
+++ b/x11-themes/iceicons/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/iceicons
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/iceicons/ChangeLog,v 1.10 2009/01/07 14:53:39 ranger Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/iceicons/ChangeLog,v 1.11 2012/10/10 13:35:47 pinkbyte Exp $
+
+  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> iceicons-0.10.0.ebuild:
+  Fix HOMEPAGE and SRC_URI - old links are broken
 
   07 Jan 2009; Brent Baude <ranger@gentoo.org> iceicons-0.10.0.ebuild:
   marking iceicons-0.10.0 ~ppc and ~ppc64 for bug 253304
