--- a/app-crypt/sign/ChangeLog
+++ b/app-crypt/sign/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/sign
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/sign/ChangeLog,v 1.15 2010/10/25 18:20:02 grobian Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/sign/ChangeLog,v 1.16 2012/10/10 14:07:05 ago Exp $
+
+  10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> sign-1.0.7.ebuild:
+  eapi4
 
   25 Oct 2010; Fabian Groffen <grobian@gentoo.org> sign-1.0.7.ebuild:
   Fix building on ppc-macos by dropping -g from hardwired CFLAGS
@@ -55,4 +58,3 @@
   13 Jul 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml,
   +sign-1.0.5.ebuild:
   Initial import, ebuild written by me.
-
