--- a/app-crypt/sign/ChangeLog
+++ b/app-crypt/sign/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/sign
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/sign/ChangeLog,v 1.16 2012/10/10 14:07:05 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/sign/ChangeLog,v 1.17 2012/10/10 14:08:50 ago Exp $
+
+  10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> sign-1.0.7.ebuild:
+  Stable for amd64, wrt bug #437822
 
   10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> sign-1.0.7.ebuild:
   eapi4
