--- a/net-analyzer/carl/ChangeLog
+++ b/net-analyzer/carl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/carl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/carl/ChangeLog,v 1.13 2012/10/10 11:23:44 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/carl/ChangeLog,v 1.14 2012/10/10 14:08:59 ago Exp $
+
+  10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> carl-0.9.ebuild:
+  Stable for amd64, wrt bug #437822
 
   10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Add netmon herd to maintainers
