--- a/sci-libs/hypre/ChangeLog
+++ b/sci-libs/hypre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/hypre
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/hypre/ChangeLog,v 1.6 2012/10/10 15:00:47 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/hypre/ChangeLog,v 1.7 2012/10/10 15:07:41 jlec Exp $
+
+  10 Oct 2012; Justin Lecher <jlec@gentoo.org> hypre-2.8.0b-r1.ebuild:
+  Respect CC, #437848
 
   10 Oct 2012; Justin Lecher <jlec@gentoo.org> hypre-2.8.0b-r1.ebuild:
   Move myeconfargs to local scope
