--- a/app-emacs/yatex/ChangeLog
+++ b/app-emacs/yatex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/yatex
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.29 2012/09/26 05:18:08 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.30 2012/10/10 15:20:38 ranger Exp $
+
+  10 Oct 2012; Brent Baude <ranger@gentoo.org> yatex-1.76.ebuild:
+  Marking yatex-1.76 ppc for bug 433187
 
   26 Sep 2012; Ulrich Müller <ulm@gentoo.org> yatex-1.74.ebuild,
   yatex-1.76.ebuild:
