--- a/app-emacs/yatex/ChangeLog
+++ b/app-emacs/yatex/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/yatex
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.30 2012/10/10 15:20:38 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.31 2012/10/10 15:39:16 ranger Exp $
+
+  10 Oct 2012; Brent Baude <ranger@gentoo.org> yatex-1.76.ebuild:
+  Backing out ppc stabile to yatex-1.76
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> yatex-1.76.ebuild:
   Marking yatex-1.76 ppc for bug 433187
