--- a/x11-misc/3dfm/ChangeLog
+++ b/x11-misc/3dfm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/3dfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/3dfm/ChangeLog,v 1.10 2012/10/10 12:16:46 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/3dfm/ChangeLog,v 1.11 2012/10/10 16:16:30 ken69267 Exp $
+
+  10 Oct 2012; Kenneth Prugh <ken69267@gentoo.org> 3dfm-1.0.ebuild:
+  amd64 stable, bug #437826
 
   10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Small fixes in metadata, add desktop-effects herd to maintainers
