--- a/net-misc/dhcp/ChangeLog
+++ b/net-misc/dhcp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.219 2012/10/10 04:16:40 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.220 2012/10/10 16:36:15 jer Exp $
+
+  10 Oct 2012; Jeroen Roovers <jer@gentoo.org> dhcp-4.2.4_p2.ebuild:
+  Stable for HPPA (bug #434880).
 
 *dhcp-4.2.4_p2-r1 (10 Oct 2012)
 
