--- a/sci-chemistry/mpqc/ChangeLog
+++ b/sci-chemistry/mpqc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/mpqc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/mpqc/ChangeLog,v 1.25 2012/10/10 15:21:28 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/mpqc/ChangeLog,v 1.26 2012/10/10 16:43:40 jlec Exp $
+
+  10 Oct 2012; Justin Lecher <jlec@gentoo.org> mpqc-2.3.1-r3.ebuild:
+  Handle static-libs
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> mpqc-2.3.1-r3.ebuild:
   Marking mpqc-2.3.1-r3 ppc for bug 436886
