--- a/net-wireless/sdrsharp/ChangeLog
+++ b/net-wireless/sdrsharp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/sdrsharp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/sdrsharp/ChangeLog,v 1.2 2012/09/10 06:11:56 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/sdrsharp/ChangeLog,v 1.3 2012/10/10 18:05:24 zerochaos Exp $
+
+  10 Oct 2012; Rick Farina <zerochaos@gentoo.org> -files/sdrsharp:
+  removing sdrsharp
 
   10 Sep 2012; Rick Farina <zerochaos@gentoo.org> sdrsharp-9999.ebuild:
   fixed incorrect license thanks to chithanh for noticing
