--- a/dev-libs/libdnet/ChangeLog
+++ b/dev-libs/libdnet/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libdnet
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdnet/ChangeLog,v 1.58 2012/10/10 16:50:05 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdnet/ChangeLog,v 1.59 2012/10/10 18:17:08 jer Exp $
+
+  10 Oct 2012; Jeroen Roovers <jer@gentoo.org> -libdnet-1.11-r1.ebuild,
+  libdnet-1.12.ebuild:
+  With RESTRICT=test it is useful to know about the dependency, but it need not
+  be set. Remove useless trunk/ subdir.
 
   10 Oct 2012; Jeroen Roovers <jer@gentoo.org> libdnet-1.12.ebuild:
   Readd keywords (bug #437800).
