--- a/dev-libs/libevent/ChangeLog
+++ b/dev-libs/libevent/ChangeLog
@@ -1,9 +1,6 @@
 # ChangeLog for dev-libs/libevent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.236 2012/10/10 15:31:33 ranger Exp $
-
-  10 Oct 2012; Brent Baude <ranger@gentoo.org> libevent-2.0.20.ebuild:
-  Marking libevent-2.0.20 ppc for bug 437766
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.237 2012/10/10 18:27:15 jer Exp $
 
   10 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libevent-2.0.20.ebuild:
   stable arm ppc ppc64, bug #437766
