--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.122 2012/10/09 20:41:47 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.123 2012/10/10 19:20:53 vapier Exp $
+
+  10 Oct 2012; Mike Frysinger <vapier@gentoo.org> qemu-1.1.2.ebuild,
+  qemu-9999.ebuild:
+  Handle more USE=static/static-libs cases.
 
   09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
   Update maintainer
