--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.123 2012/10/10 19:20:53 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.124 2012/10/10 19:24:31 vapier Exp $
+
+  10 Oct 2012; Mike Frysinger <vapier@gentoo.org> metadata.xml,
+  qemu-1.1.2.ebuild, qemu-9999.ebuild:
+  Convert to USE=uuid since the -luuid interface is portable beyond linux.
 
   10 Oct 2012; Mike Frysinger <vapier@gentoo.org> qemu-1.1.2.ebuild,
   qemu-9999.ebuild:
