--- a/dev-java/saxon/ChangeLog
+++ b/dev-java/saxon/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/saxon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/saxon/ChangeLog,v 1.42 2012/10/10 21:32:05 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/saxon/ChangeLog,v 1.43 2012/10/10 21:33:16 naota Exp $
+
+  10 Oct 2012;  <naota@gentoo.org> saxon-9.2.0.6.ebuild:
+  Add ~x86-fbsd wrt bug #421733
 
   10 Oct 2012;  <naota@gentoo.org> saxon-9.2.0.6.ebuild:
   Add ~x86-fbsd wrt bug #421733
