--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.429 2012/10/06 19:52:53 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.430 2012/10/10 22:04:35 floppym Exp $
+
+  10 Oct 2012; Mike Gilbert <floppym@gentoo.org> -sqlite-3.7.14.ebuild:
+  Remove at Arfrever's request.
 
 *sqlite-3.7.14.1 (06 Oct 2012)
 
