--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1118 2012/10/10 22:13:35 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1119 2012/10/10 22:16:47 zmedico Exp $
+
+*portage-2.2.0_alpha137 (10 Oct 2012)
+
+  10 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha137.ebuild,
+  portage-9999.ebuild:
+  2.2.0_alpha137 version bump. This includes all of the fixes in 2.1.11.26. Bug
+  #210077 tracks all bugs fixed since portage-2.1.x. Also, sync 9999 ebuild with
+  latest.
 
 *portage-2.1.11.26 (10 Oct 2012)
 
