--- a/x11-libs/vte/ChangeLog
+++ b/x11-libs/vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.340 2012/10/10 07:01:07 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.341 2012/10/10 22:32:29 blueness Exp $
+
+  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org> vte-0.28.2-r204.ebuild:
+  stable ppc ppc64, bug #427802
 
   10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> vte-0.28.2-r204.ebuild:
   Stable for amd64, wrt bug #427802
