--- a/dev-util/debhelper/ChangeLog
+++ b/dev-util/debhelper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/debhelper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.62 2012/10/10 23:34:17 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.63 2012/10/11 00:00:39 blueness Exp $
+
+  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  debhelper-9.20120909.ebuild:
+  stable ppc ppc64, bug #437784
 
   10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   debhelper-9.20120909.ebuild:
