--- a/dev-util/debhelper/ChangeLog
+++ b/dev-util/debhelper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/debhelper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.63 2012/10/11 00:00:39 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.64 2012/10/11 05:12:09 jer Exp $
+
+  11 Oct 2012; Jeroen Roovers <jer@gentoo.org> debhelper-9.20120909.ebuild:
+  Stable for HPPA (bug #437784).
 
   10 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   debhelper-9.20120909.ebuild:
