--- a/dev-ruby/kissfft/ChangeLog
+++ b/dev-ruby/kissfft/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/kissfft
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/kissfft/ChangeLog,v 1.1 2012/10/10 17:45:11 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/kissfft/ChangeLog,v 1.2 2012/10/11 06:16:12 graaff Exp $
+
+  11 Oct 2012; Hans de Graaff <graaff@gentoo.org> metadata.xml:
+  Add ruby herd to package in dev-ruby so we can help with maintenance.
 
 *kissfft-0.0.1 (10 Oct 2012)
 
