--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.125 2012/10/10 19:29:27 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.126 2012/10/11 07:40:26 slyfox Exp $
+
+  11 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org>
+  +files/qemu-9999-fix-mipsen.patch:
+  Addmissing patch for mips (lost after qemu-kvm -> qemu migration).
 
   10 Oct 2012; Mike Frysinger <vapier@gentoo.org> qemu-1.1.2.ebuild,
   qemu-9999.ebuild:
