--- a/dev-perl/Email-Simple/ChangeLog
+++ b/dev-perl/Email-Simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-Simple
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.65 2012/10/10 15:39:46 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.66 2012/10/11 08:01:18 blueness Exp $
+
+  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  Email-Simple-2.102.0.ebuild:
+  stable ppc64, bug #433247
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> Email-Simple-2.102.0.ebuild:
   Marking Email-Simple-2.102.0 ppc for bug 433247
