--- a/sys-fs/btrfs-progs/ChangeLog
+++ b/sys-fs/btrfs-progs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/btrfs-progs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.50 2012/09/29 13:02:48 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.51 2012/10/11 08:06:57 slyfox Exp $
+
+  11 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org> btrfs-progs-9999.ebuild:
+  Remove sed "s:gcc:$(CC):" and "s:make:$(MAKE):" as patches gone upstream.
 
   29 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   btrfs-progs-0.19.11.ebuild:
