--- a/sys-fs/btrfs-progs/ChangeLog
+++ b/sys-fs/btrfs-progs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/btrfs-progs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.51 2012/10/11 08:06:57 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.52 2012/10/11 08:35:51 slyfox Exp $
+
+*btrfs-progs-0.20_rc1 (11 Oct 2012)
+
+  11 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org>
+  +btrfs-progs-0.20_rc1.ebuild:
+  Version bump up to upstream release candidate.
 
   11 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org> btrfs-progs-9999.ebuild:
   Remove sed "s:gcc:$(CC):" and "s:make:$(MAKE):" as patches gone upstream.
