--- a/app-shells/rrs/ChangeLog
+++ b/app-shells/rrs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/rrs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/rrs/ChangeLog,v 1.17 2012/10/11 09:12:28 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/rrs/ChangeLog,v 1.18 2012/10/11 09:21:54 pinkbyte Exp $
+
+*rrs-1.70-r1 (11 Oct 2012)
+
+  11 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +rrs-1.70-r1.ebuild:
+  Bump to EAPI 4
 
   11 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Assign myself as maintainer
