--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.126 2012/10/11 07:40:26 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.127 2012/10/11 09:40:02 jlec Exp $
+
+  11 Oct 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add  better USE description for jpeg and png
 
   11 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org>
   +files/qemu-9999-fix-mipsen.patch:
