--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.434 2012/10/08 18:44:30 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.435 2012/10/11 10:51:41 jlec Exp $
 
   08 Oct 2012; Michał Górny <mgorny@gentoo.org> +autotools-multilib.eclass:
   Introduce autotools-multilib, to simplify building multilib packages with
@@ -103,6 +103,9 @@
   20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> autotools.eclass:
   Be more strict about eautoreconfig on aclocal.m4. Fixes bug#424763 and
   bug#420631.
+
+  20 Sep 2012; Justin Lecher <jlec@gentoo.org> intel-sdp.eclass:
+  Keyword for *-linux prefix
 
   20 Sep 2012; Michael Palimaka <kensington@gentoo.org> cmake-utils.eclass:
   Add support for the ninja build system wrt bug #430608. Improve prefix
