--- a/x11-libs/vte/ChangeLog
+++ b/x11-libs/vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.342 2012/10/10 23:04:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.343 2012/10/11 11:25:30 maekke Exp $
+
+  11 Oct 2012; Markus Meier <maekke@gentoo.org> vte-0.28.2-r204.ebuild:
+  arm stable, bug #427802
 
   10 Oct 2012; Anthony G. Basile <blueness@gentoo.org> vte-0.32.2.ebuild:
   stable ppc ppc64, bug #427544
