--- a/net-misc/dhcp/ChangeLog
+++ b/net-misc/dhcp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.220 2012/10/10 16:36:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.221 2012/10/11 11:29:03 maekke Exp $
+
+  11 Oct 2012; Markus Meier <maekke@gentoo.org> dhcp-4.2.4_p2.ebuild:
+  arm stable, bug #434880
 
   10 Oct 2012; Jeroen Roovers <jer@gentoo.org> dhcp-4.2.4_p2.ebuild:
   Stable for HPPA (bug #434880).
