--- a/dev-libs/libnl/ChangeLog
+++ b/dev-libs/libnl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libnl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.104 2012/10/10 15:35:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libnl/ChangeLog,v 1.105 2012/10/11 11:32:33 maekke Exp $
+
+  11 Oct 2012; Markus Meier <maekke@gentoo.org> libnl-3.2.13.ebuild:
+  arm stable, bug #437022
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> libnl-3.2.13.ebuild:
   Marking libnl-3.2.13 ppc for bug 437022
