--- a/x11-libs/libva-intel-driver/ChangeLog
+++ b/x11-libs/libva-intel-driver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libva-intel-driver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva-intel-driver/ChangeLog,v 1.8 2012/08/16 21:39:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva-intel-driver/ChangeLog,v 1.9 2012/10/11 12:16:08 aballier Exp $
+
+  11 Oct 2012; Alexis Ballier <aballier@gentoo.org>
+  libva-intel-driver-9999.ebuild, metadata.xml:
+  Add X and wayland useflags
 
   16 Aug 2012; Alexis Ballier <aballier@gentoo.org>
   libva-intel-driver-1.0.18-r1.ebuild:
