--- a/x11-libs/libva/ChangeLog
+++ b/x11-libs/libva/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libva
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva/ChangeLog,v 1.41 2012/10/11 12:05:49 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libva/ChangeLog,v 1.42 2012/10/11 12:33:13 aballier Exp $
+
+  11 Oct 2012; Alexis Ballier <aballier@gentoo.org> +libva-1.1.0.ebuild:
+  version bump
 
   11 Oct 2012; Alexis Ballier <aballier@gentoo.org> libva-9999.ebuild,
   metadata.xml:
