--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.416 2012/10/10 20:11:06 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.417 2012/10/11 13:34:43 jer Exp $
+
+  11 Oct 2012; Jeroen Roovers <jer@gentoo.org> bind-9.9.1_p4.ebuild:
+  Stable for HPPA (bug #437828).
 
 *bind-9.9.2 (10 Oct 2012)
 *bind-9.9.1_p4 (10 Oct 2012)
