--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.417 2012/10/11 13:34:43 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.418 2012/10/11 13:56:02 nativemad Exp $
+
+  11 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> bind-9.9.1_p4.ebuild:
+  x86 stable, see bug 437828
 
   11 Oct 2012; Jeroen Roovers <jer@gentoo.org> bind-9.9.1_p4.ebuild:
   Stable for HPPA (bug #437828).
