--- a/dev-perl/Net-SSLeay/ChangeLog
+++ b/dev-perl/Net-SSLeay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-SSLeay
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.86 2012/10/11 11:27:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.87 2012/10/11 14:22:27 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Net-SSLeay-1.480.0-r1.ebuild:
+  Stable for amd64, wrt bug #433249
 
   11 Oct 2012; Markus Meier <maekke@gentoo.org> Net-SSLeay-1.480.0-r1.ebuild:
   arm stable, bug #433249
