--- a/dev-perl/SOAP-Lite/ChangeLog
+++ b/dev-perl/SOAP-Lite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SOAP-Lite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SOAP-Lite/ChangeLog,v 1.83 2012/10/11 08:06:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SOAP-Lite/ChangeLog,v 1.84 2012/10/11 14:22:46 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> SOAP-Lite-0.715.0.ebuild:
+  Stable for amd64, wrt bug #433251
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> SOAP-Lite-0.715.0.ebuild:
   stable ppc64, bug #433251
