--- a/net-wireless/hostapd/ChangeLog
+++ b/net-wireless/hostapd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/hostapd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.130 2012/10/11 14:12:41 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.131 2012/10/11 14:23:53 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> hostapd-1.0-r4.ebuild:
+  Stable for amd64, wrt bug #437830
 
   11 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> hostapd-1.0-r4.ebuild:
   x86 stable, see bug 437830
