--- a/dev-perl/config-general/ChangeLog
+++ b/dev-perl/config-general/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/config-general
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.80 2012/10/11 08:03:50 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/config-general/ChangeLog,v 1.81 2012/10/11 14:24:13 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> config-general-2.510.0.ebuild:
+  Stable for amd64, wrt bug #433255
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   config-general-2.510.0.ebuild:
