Stable for amd64, wrt bug #433241
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/dev-perl/Convert-TNEF/ChangeLog
+++ b/dev-perl/Convert-TNEF/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Convert-TNEF
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-TNEF/ChangeLog,v 1.26 2012/10/11 07:33:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-TNEF/ChangeLog,v 1.27 2012/10/11 14:25:28 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Convert-TNEF-0.180.0.ebuild:
+  Stable for amd64, wrt bug #433241
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   Convert-TNEF-0.180.0.ebuild:
