--- a/dev-perl/Email-Simple/ChangeLog
+++ b/dev-perl/Email-Simple/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Email-Simple
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.66 2012/10/11 08:01:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.67 2012/10/11 14:26:15 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Email-Simple-2.102.0.ebuild:
+  Stable for amd64, wrt bug #433247
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   Email-Simple-2.102.0.ebuild:
