x86 stable, see bug 340897
Package-Manager: portage-2.1.11.9/cvs/Linux i686

--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.98 2012/10/10 19:52:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.99 2012/10/11 14:36:13 nativemad Exp $
+
+  11 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> ettercap-0.7.5.ebuild:
+  x86 stable, see bug 340897
 
 *ettercap-0.7.5 (10 Oct 2012)
 
